<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_preview_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvReportTitle"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/report_subject"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCostumerName"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:padding="16dp"
        android:text="@string/client_name"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReportTitle" />

    <TextView
        android:id="@+id/tvReportDate"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/report_date"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCostumerName"
        />

    <TextView
        android:id="@+id/tvReportLocation"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/report_location"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReportDate" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvReportLocation"
        app:layout_constraintBottom_toTopOf="@id/btnDelete">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPreviewEntries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"/>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExport"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:text="@string/export_as_pdf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDelete" />
</androidx.constraintlayout.widget.ConstraintLayout>